# Odin-s-Opera

./: .gitignore  README.md
odins_opera/: README.md  pyproject.toml
odins_opera/code/: orchestrator.py
odins_opera/src/odins_opera/: crew.py  main.py
