[project]
name = "odins_opera"
version = "0.1.0"
description = "odins_opera using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
odins_opera = "odins_opera.main:run"
run_crew = "odins_opera.main:run"
train = "odins_opera.main:train"
replay = "odins_opera.main:replay"
test = "odins_opera.main:test"
run_with_trigger = "odins_opera.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
